Add image to item and update background styling for carousel

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         <div class="list">
             <div class="item">
-              
+                <img src="imgs/invertida.jpg" alt="#">
                 <header>
                     <div class="nav_logo">君の名は。</div>
                     <nav class="nav">
