Add navigation arrows to carousel and update styling

--- a/index.html
+++ b/index.html
@@ -184,7 +184,10 @@
 
 
         </div>
-
+        <div class="arrows">
+            <button id="prev"><</button>
+            <button id="next">></button>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
