Update titles and descriptions for carousel items; enhance styling and structure

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                
                 <img src="imgs/bonito3.png" alt="#">
                 <header>
-                    <div class="nav_logo">君の名は。</div>
+                    <div class="nav_logo">ともだちトトロ</div>
                     <nav class="nav">
 
                         <ul>
@@ -43,13 +43,9 @@
 
                 <div class="content">
                     <div class="main-text">
-                        <h2 class="title">Your name</h2>
+                        <h2 class="title">My Neighbor Totoro</h2>
 
-                        <p class="paragrafo">Mitsuha, a high school girl from a rural town, dreams of escaping to a
-                            bustling city life. Meanwhile, Taki, a boy working at a restaurant in Tokyo, wishes to quit
-                            his job.
-                            Though they’ve never met, their lives are mysteriously connected through vivid dreams that
-                            intertwine their destinies.</p>
+                        <p class="paragrafo">In 1950s rural Japan, sisters Satsuki and Mei Kusakabe move to the countryside with their father to be closer to their hospitalized mother. As they explore their new home and surroundings, they encounter magical forest spirits, including the gentle and mysterious Totoro. Through these whimsical adventures, the sisters discover the power of family, hope, and the wonders of nature.</p>
 
                         <a href="#" class="watch-now">Watch Now</a>
                     </div>
@@ -59,7 +55,7 @@
             <div class="item">
                 <img src="imgs/main.png" alt="#">
                 <header>
-                    <div class="nav_logo">君の名は。</div>
+                    <div class="nav_logo">聲の形</div>
                     <nav class="nav">
 
                         <ul>
@@ -84,13 +80,9 @@
 
                 <div class="content">
                     <div class="main-text">
-                        <h2 class="title">Your name</h2>
+                        <h2 class="title">A Silent Voice</h2>
 
-                        <p class="paragrafo">Mitsuha, a high school girl from a rural town, dreams of escaping to a
-                            bustling city life. Meanwhile, Taki, a boy working at a restaurant in Tokyo, wishes to quit
-                            his job.
-                            Though they’ve never met, their lives are mysteriously connected through vivid dreams that
-                            intertwine their destinies.</p>
+                        <p class="paragrafo">Shoya Ishida, a young man haunted by the regret of his past, seeks redemption upon reuniting with Shoko Nishimiya, a girl with a hearing impairment whom he bullied as a child. As he struggles to forgive himself, Shoya embarks on a journey of empathy and reconnection, discovering the value of words and silence in building new friendships and earning a second chance.</p>
 
                         <a href="#" class="watch-now">Watch Now</a>
                     </div>
@@ -172,14 +164,7 @@
                 </div>
             </div>
 
-            <div class="item">
-                <img src="imgs/testea.jpg" alt="">
-                <div class="content">
-                    <div class="title">
-
-                    </div>
-                </div>
-            </div>
+      
 
 
 
