Update navigation links to reflect 'Movie Details' and adjust z-index for carousel items

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <nav class="nav">
 
                         <ul>
-                            <li><a href="#">All Movies</a></li>
+                            <li><a href="#">Movie Details</a></li>
                             <li><a href="#">Movie List</a></li>
                             <li><a href="#">Trailer Movie</a></li>
                         </ul>
@@ -30,7 +30,7 @@
 
                         <div class="dropdown">
 
-                            <li><a class="dropdown_links" href="#">All Movies</a></li>
+                            <li><a class="dropdown_links" href="#">Movie Details</a></li>
                             <li><a class="dropdown_links" href="#">Movie List</a></li>
                             <li><a class="dropdown_links" href="#">Trailer Movie</a></li>
 
@@ -59,7 +59,7 @@
                     <nav class="nav">
 
                         <ul>
-                            <li><a href="#">All Movies</a></li>
+                            <li><a href="#">Movie Details</a></li>
                             <li><a href="#">Movie List</a></li>
                             <li><a href="#">Trailer Movie</a></li>
                         </ul>
@@ -67,7 +67,7 @@
 
                         <div class="dropdown">
 
-                            <li><a class="dropdown_links" href="#">All Movies</a></li>
+                            <li><a class="dropdown_links" href="#">Movie Details</a></li>
                             <li><a class="dropdown_links" href="#">Movie List</a></li>
                             <li><a class="dropdown_links" href="#">Trailer Movie</a></li>
 
@@ -97,7 +97,7 @@
                     <nav class="nav">
 
                         <ul>
-                            <li><a href="#">All Movies</a></li>
+                            <li><a href="#">Movie Details</a></li>
                             <li><a href="#">Movie List</a></li>
                             <li><a href="#">Trailer Movie</a></li>
                         </ul>
@@ -105,7 +105,7 @@
 
                         <div class="dropdown">
 
-                            <li><a class="dropdown_links" href="#">All Movies</a></li>
+                            <li><a class="dropdown_links" href="#">Movie Details</a></li>
                             <li><a class="dropdown_links" href="#">Movie List</a></li>
                             <li><a class="dropdown_links" href="#">Trailer Movie</a></li>
 
