Refactor dropdown menu structure and enhance toggle functionality for improved user experience

--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
                         <div class="toggle_btn"><i class="fa-solid fa-bars"></i></div>
 
                         <div class="dropdown">
-
-                            <li><a class="dropdown_links" href="#">Movie Details</a></li>
-                            <li><a class="dropdown_links" href="#">Movie List</a></li>
-                            <li><a class="dropdown_links" href="#">Trailer Movie</a></li>
-
+                            <ul>
+                                <li><a class="dropdown_links" href="#">Movie Details</a></li>
+                                <li><a class="dropdown_links" href="#">Movie List</a></li>
+                                <li><a class="dropdown_links" href="#">Trailer Movie</a></li>
+                            </ul>
                         </div>
                     </nav>
 
@@ -103,7 +103,7 @@
                         </ul>
                         <div class="toggle_btn"><i class="fa-solid fa-bars"></i></div>
 
-                        <div class="dropdown">
+                        <div class="dropdown open">
 
                             <li><a class="dropdown_links" href="#">Movie Details</a></li>
                             <li><a class="dropdown_links" href="#">Movie List</a></li>
