Enhance carousel animations and structure for improved visual effects and transitions

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="carousel">
+    <div class="carousel prev">
 
         <div class="list">
             <div class="item">
@@ -133,7 +133,7 @@
         </div> <!-- Fechando a div.list -->
 
         <!--imgem em miniatura-->
-        <div class="thumbnail">
+        <div class="thumbnail ">
             <div class="item">
                 <img src="imgs/tumb.jpg" alt="">
                 <div class="content">
