--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <div class="carousel prev">
+    <div class="carousel">
 
         <div class="list">
             <div class="item">
