--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
             <div class="item">
             
-                <img src="imgs/wallpaperflare.com_wallpaper (2).jpg/" alt="">
+                <img src="imgs/wallpaperflare.com_wallpaper (2).jpg" alt="">
                 <div class="content">
                     <div class="title">
 
