--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <button id="next">></button>
         </div>
 
-        <div class="pop-Up-Container">
+        <div class="pop-up-container">
             <div class="mat-dialog-container">
                 <div class="gps-alert-box">
                     <img src="imgs/Group 566.svg" alt="Estrela" class="icon-top-left">
@@ -213,7 +213,7 @@
                                 <input type="text" id="Logo" name="Logo" required>
                                 <label for="name">Logo</label>
                             </div>
-
+                            <button type="submit" class="btn">Register</button>
                         </form>
                     </div>
                     <div class="close">
