Refactor Add Movie button class names for consistency in navigation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <nav class="nav">
 
                         <ul>
-                            <li><a href="#" class="addMovieBtn">Add Movie</a></li>
+                            <li><a href="#" class="dropdown_links">Add Movie</a></li>
 
                             <li><a href="#">Movie List</a></li>
                             <li><a href="#">Trailer Movie</a></li>
@@ -31,7 +31,7 @@
 
                         <div class="dropdown">
 
-                            <li><a class="dropdown_links" href="#" id="addMovieBtn">Add Movie</a></li>
+                            <li><a class="dropdown_links" href="#" >Add Movie</a></li>
                             <li><a class="dropdown_links" href="#">Movie List</a></li>
                             <li><a class="dropdown_links" href="#">Trailer Movie</a></li>
 
@@ -60,7 +60,7 @@
                     <nav class="nav">
 
                         <ul>
-                            <li><a href="#" class="addMovieBtn">Add Movie</a></li>
+                            <li><a href="#" class="dropdown_links">Add Movie</a></li>
                             <li><a href="#">Movie List</a></li>
                             <li><a href="#">Trailer Movie</a></li>
                         </ul>
@@ -68,7 +68,7 @@
 
                         <div class="dropdown">
 
-                            <li><a class="dropdown_links" href="#">Add Movie</a></li>
+                            <li><a class="dropdown_links"  href="#">Add Movie</a></li>
                             <li><a class="dropdown_links" href="#">Movie List</a></li>
                             <li><a class="dropdown_links" href="#">Trailer Movie</a></li>
 
@@ -98,7 +98,7 @@
                     <nav class="nav">
 
                         <ul>
-                            <li><a href="#" class="addMovieBtn">Add Movie</a></li>
+                            <li><a href="#" class="dropdown_links">Add Movie</a></li>
                             <li><a href="#">Movie List</a></li>
                             <li><a href="#">Trailer Movie</a></li>
                         </ul>
@@ -106,7 +106,7 @@
 
                         <div class="dropdown open">
 
-                            <li><a class="dropdown_links" href="#">Add Movie</a></li>
+                            <li><a class="dropdown_links"  href="#">Add Movie</a></li>
                             <li><a class="dropdown_links" href="#">Movie List</a></li>
                             <li><a class="dropdown_links" href="#">Trailer Movie</a></li>
 
