adicionando links em "Watch Now"

--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
 
                         <p class="paragrafo">In 1950s rural Japan, sisters Satsuki and Mei Kusakabe move to the countryside with their father to be closer to their hospitalized mother. As they explore their new home and surroundings, they encounter magical forest spirits, including the gentle and mysterious Totoro. Through these whimsical adventures, the sisters discover the power of family, hope, and the wonders of nature.</p>
 
-                        <a href="#" class="watch-now">Watch Now</a>
+                        <a href="https://www.netflix.com/title/60032294" class="watch-now" target="_blank" rel="noopener noreferrer">Watch Now</a>
+
                     </div>
                 </div>
             </div>
@@ -85,7 +86,7 @@
 
                         <p class="paragrafo">Shoya Ishida, a young man haunted by the regret of his past, seeks redemption upon reuniting with Shoko Nishimiya, a girl with a hearing impairment whom he bullied as a child. As he struggles to forgive himself, Shoya embarks on a journey of empathy and reconnection, discovering the value of words and silence in building new friendships and earning a second chance.</p>
 
-                        <a href="#" class="watch-now">Watch Now</a>
+                        <a href="https://www.crunchyroll.com/pt-br/series/GP5HJ84XV/a-silent-voice?srsltid=AfmBOoq4mC_l3DCocgQ3oUCNb5tYBdqRiF0fwR5G3bq1FhCoXqr9LAkM" class="watch-now" target="_blank" rel="noopener noreferrer">Watch Now</a>
                     </div>
                 </div>
             </div>
@@ -127,7 +128,7 @@
                             Though they’ve never met, their lives are mysteriously connected through vivid dreams that
                             intertwine their destinies.</p>
 
-                        <a href="#" class="watch-now">Watch Now</a>
+                            <a href="https://www.crunchyroll.com/pt-br/series/G9VHN9PK3/your-name?srsltid=AfmBOorl6ReIUPCVysZ90T71R7fvVhuR90PC-x8vdOjUvVYwY6h1VMLQ" class="watch-now" target="_blank" rel="noopener noreferrer">Watch Now</a>
                     </div>
                 </div>
             </div>
